objects/Landowner_Parcel__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Land__c</fullName>
        <inlineHelpText>Assessment for the Actual / Market value of the Parcel&apos;s Land</inlineHelpText>
        <label>Actual - Land</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Structure__c</fullName>
        <inlineHelpText>Assessment for the Actual / Market value of the Parcel&apos;s Structure</inlineHelpText>
        <label>Actual - Structure</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_AC__c</fullName>
        <label>Area (AC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_SF__c</fullName>
        <label>Area (SF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessed_Land__c</fullName>
        <inlineHelpText>Assessed Land Value</inlineHelpText>
        <label>Assessed - Land</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessed_Structure__c</fullName>
        <inlineHelpText>Assessed Structure value</inlineHelpText>
        <label>Assessed - Structure</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessor_Account_Number__c</fullName>
        <label>Assessor Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Parcel Address - City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ditch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ditch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEMA_Floodplain_Designation__c</fullName>
        <label>FEMA Floodplain Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floodplain_List__c</fullName>
        <label>Floodplain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>100-Year Floodplain</fullName>
                </value>
                <value>
                    <fullName>500-Year Floodplain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floodway__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floodway?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Places_Description__c</fullName>
        <label>Historic Places Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historic_Places__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historic Places?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Description__c</fullName>
        <label>Legal Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Land__c</fullName>
        <label>Market - Land</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Structure__c</fullName>
        <label>Market - Structure</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mill_Levy__c</fullName>
        <label>Mill Levy</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NWI_Wetland_Designation__c</fullName>
        <label>NWI Wetland Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Ditch__c</fullName>
        <label>Name of Ditch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Jurisdiction__c</fullName>
        <inlineHelpText>Jurisdiction &amp; Zoning</inlineHelpText>
        <label>Name of Jurisdiction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Stream_River__c</fullName>
        <label>Name of Stream / River</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <inlineHelpText>Parcel PIN location</inlineHelpText>
        <label>PIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_Description__c</fullName>
        <label>Parcel Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parcel_Number__c</fullName>
        <label>Parcel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_Stage__c</fullName>
        <label>Parcel Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Tabled</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Agreement sent for Execution</fullName>
                    <isActive>false</isActive>
                    <label>Agreement sent for Execution</label>
                </value>
                <value>
                    <fullName>Agreement sent for Review</fullName>
                    <isActive>false</isActive>
                    <label>Agreement sent for Review</label>
                </value>
                <value>
                    <fullName>Customer Growth</fullName>
                    <isActive>false</isActive>
                    <label>Customer Growth</label>
                </value>
                <value>
                    <fullName>Development</fullName>
                    <isActive>false</isActive>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>Financing</fullName>
                    <isActive>false</isActive>
                    <label>Financing</label>
                </value>
                <value>
                    <fullName>Term Sheet Review</fullName>
                    <isActive>false</isActive>
                    <label>Term Sheet Review</label>
                </value>
                <value>
                    <fullName>Transition to Construction</fullName>
                    <isActive>false</isActive>
                    <label>Transition to Construction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parcel_Type__c</fullName>
        <label>Parcel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solar Site</fullName>
                </value>
                <value>
                    <fullName>Easement site</fullName>
                </value>
                <value>
                    <fullName>Offsite Access Easement</fullName>
                </value>
                <value>
                    <fullName>Offsite Transmission Easement</fullName>
                </value>
                <value>
                    <fullName>Offsite Drainage Easement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Development__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Development</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <inlineHelpText>Parcel Address - State</inlineHelpText>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <inlineHelpText>Parcel Address - Street</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision_Name__c</fullName>
        <label>Subdivision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_E_Description__c</fullName>
        <label>T&amp;E Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_E_Initial_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Initial Screen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Area__c</fullName>
        <label>Tax Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Township__c</fullName>
        <label>Township</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetlands__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wetlands?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <inlineHelpText>Parcel Address - Zip</inlineHelpText>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_District__c</fullName>
        <label>Zone District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Parcel</label>
    <nameField>
        <label>Parcel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>